ensured mobile nav styles not showing on desktop

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -5,35 +5,37 @@ header {
   background: $yellow;
 }
 nav {
-  display: none;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding-top: 80px;
-  width: 100%;
-  height: 100%;
-  background: $yellow;
-  z-index: 100;
-  &.open {
-    display: block;
-  }
-  & a {
-    display: block;
-    width: 80%;
-    text-align: center;
-    font-size: 24px;
-    line-height: 75px;
-    height: 75px;
-    color: #000000;
-    padding-bottom: 20px;
-    border-top: solid black 1px;
-    margin-left: 10%;
-    
-    &:last-of-type {
-      border-bottom: solid black 1px;
+  @media all and (max-width: 991px) {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-top: 80px;
+    width: 100%;
+    height: 100%;
+    background: $yellow;
+    z-index: 100;
+    &.open {
+      display: block;
+    }
+    & a {
+      display: block;
+      width: 80%;
+      text-align: center;
+      font-size: 24px;
+      line-height: 75px;
+      height: 75px;
+      color: #000000;
+      padding-bottom: 20px;
+      border-top: solid black 1px;
+      margin-left: 10%;
+      
+      &:last-of-type {
+        border-bottom: solid black 1px;
 
+      }
     }
   }
   @media all and (min-width: 992px) {
